<resources>
    <string name="app_name">Freelance Hours</string>
    <string name="title_hours">Hours</string>
    <string name="title_projects">Projects</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_tax">Tax</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AddNewProjectTitle">Add new project</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="hour_rate">Hour rate</string>
    <string name="date">Date</string>
    <string name="started_at">Started at</string>
    <string name="finished_at">Finished at</string>
    <string name="tax">Tax</string>
    <string name="project">Project</string>
    <string name="total_logs">Total logs</string>
    <string name="total_revenue">Total revenue</string>
    <string name="tax_rate">Tax rate</string>
    <string name="total_projects">Total projects</string>
    <string name="total_hours">Total hours</string>
    <string name="welcome_coen">Welcome Coen</string>
    <string name="add_new_hours">Add new hours</string>
    <string name="add_new_project">Add new project</string>
</resources>
