<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.coen.freelancehours.ui.dashboard.DashboardViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dashboard.DashboardFragment"
        android:padding="22dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="34sp"
                android:textColor="@color/colorText"
                android:text="@string/welcome_coen" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="68dp">


                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/ll_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_total_revenue"
                        android:layout_width="0dp"
                        android:layout_height="66dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="40dp">

                        <View
                            android:layout_width="2dp"
                            android:layout_height="fill_parent"
                            android:background="@color/colorGreen" />

                        <TextView
                            style="@style/TextView.DashboardLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/total_revenue"
                            android:textSize="14sp"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_tr_value"
                            style="@style/TextView.DashboardValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="$5849.23"
                            android:textSize="24sp" />


                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_total_projects"
                        android:layout_width="0dp"
                        android:layout_height="66dp"
                        android:layout_weight="1">

                        <View
                            android:layout_width="2dp"
                            android:layout_height="fill_parent"
                            android:background="@color/colorOrange" />

                        <TextView
                            style="@style/TextView.DashboardLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/total_projects"
                            android:textSize="14sp"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_tp_value"
                            style="@style/TextView.DashboardValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="6"
                            android:textSize="24sp" />

                    </android.support.v7.widget.CardView>
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/ll_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@id/ll_first">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_total_hours"
                        android:layout_width="0dp"
                        android:layout_height="66dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="40dp">

                        <View
                            android:layout_width="2dp"
                            android:layout_height="fill_parent"
                            android:background="@color/colorRed" />

                        <TextView
                            style="@style/TextView.DashboardLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/total_hours"
                            android:textSize="14sp"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_th_value"
                            style="@style/TextView.DashboardValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="164"
                            android:textSize="24sp" />


                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_total_logs"
                        android:layout_width="0dp"
                        android:layout_height="66dp"
                        android:layout_weight="1">

                        <View
                            android:layout_width="2dp"
                            android:layout_height="fill_parent"
                            android:background="@color/colorBlue" />

                        <TextView
                            style="@style/TextView.DashboardLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/total_logs"
                            android:textSize="14sp"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_tl_value"
                            style="@style/TextView.DashboardValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="94"
                            android:textSize="24sp" />

                    </android.support.v7.widget.CardView>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</layout>